--- a/templates/fund_list.html
+++ b/templates/fund_list.html
@@ -42,8 +42,8 @@
 <div class="Qcontent">
   <div class="Qplace">
     <div class="curPlace">
-      <a href="/index.shtml">首页</a> &gt;&gt; <a href="/id_zwgk201803120100392355/column.shtml">政务公开</a> &gt;&gt; <a
-            href="/id_czxx201803120108401728/column.shtml">财政资金</a>
+{#      <a href="/index.shtml">首页</a> &gt;&gt; <a href="/id_zwgk201803120100392355/column.shtml">政务公开</a> &gt;&gt; <a#}
+{#            href="/id_czxx201803120108401728/column.shtml">财政资金</a>#}
     </div>
   </div>
   <div class="Qcolumn">
