--- a/templates/organization_list.html
+++ b/templates/organization_list.html
@@ -1,4 +1,12 @@
-{% extends "leader_list.html" %}
+{% extends "list.html" %}
+{% block left_list %}
+  <ul class="listUl">
+    <div class="Qli"><a href="javascript:void(0);">{{ left_list[0].name }}</a></div>
+    {% for h in left_list[1:] %}
+      <li><a href="{{ url_for(h.href, cate=h.cate) }}" title="#">{{ h.name }}</a></li>
+    {% endfor %}
+  </ul>
+{% endblock %}
 {% block right_content %}
   <div class="QcolR fr">
     <!-- 行政单位 -->
