--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -4,19 +4,19 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1 ">
   <title>江西省统计局</title>
-  <link href="../static/css/default.css" rel="stylesheet" type="text/css">
-  <script src="../static/js/jquery-1.11.3.min.js"></script>
+  <link href="/static/css/default.css" rel="stylesheet" type="text/css">
+  <script src="/static/js/jquery-1.11.3.min.js"></script>
 
 </head>
 <body id="maincontainer">
 <!-- 头部 -->
-<script src="../static/js/lang.js"></script>
+<script src="/static/js/lang.js"></script>
 
 <!--<div style="height:215px; background:url(/resource/uploadfile/image/20190930/20190930111619398.jpg) no-repeat center top;"></div>-->
 
 
 <div class="QScenbox">
-  <div class="Qlogo fl"><img src="../static/img/Qlogo.png" alt=""></div>
+  <div class="Qlogo fl"><img src="/static/img/Qlogo.png" alt=""></div>
   <div class="Qsearch fr">
     <form action="/search_list/" method="post">
       <input id="ss-k" name="ss-k" type="text" class="fl" placeholder="请输入关键字">
@@ -44,8 +44,8 @@
 <div class="Qcontent">
   <div class="Qplace">
     <div class="curPlace">
-      <a href="/index.shtml">首页</a> &gt;&gt; <a href="/id_hdjl201803120059532727/column.shtml">互动交流</a> &gt;&gt;
-      <a href="/id_wsdc201803120101254971/column.shtml">网上调查</a>
+{#      <a href="/index.shtml">首页</a> &gt;&gt; <a href="/id_hdjl201803120059532727/column.shtml">互动交流</a> &gt;&gt;#}
+{#      <a href="/id_wsdc201803120101254971/column.shtml">网上调查</a>#}
     </div>
   </div>
   <div class="Qcolumn">
@@ -209,7 +209,7 @@
 
   </div>
 </div>
-<script src="../static/js/easy.navigat.js"></script>
+<script src="/static/js/easy.navigat.js"></script>
 <script>
     $(function () {
         $('.Qnav li').each(function (i) {
