--- a/static/css/default.css
+++ b/static/css/default.css
@@ -107,7 +107,7 @@ a:hover {
 .Qtopul li {
     float: left;
     padding: 0 12px;
-    background: url(../img/Qli.png) no-repeat left 8px;
+    background: url(/img/Qli.png) no-repeat left 8px;
 }
 
 .Qtopul li:first-child {
