--- a/templates/search_list.html
+++ b/templates/search_list.html
@@ -1,175 +1,4 @@
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1 ">
-  <title>江西省统计局</title>
-  <link href="/scheme/STRONGIPPXXFBPT/sc201304221635015387104/default.css" rel="stylesheet" type="text/css">
-  <script src="/resource/js/jquery-1.11.3.min.js"></script>
+{% extends 'base_view.html' %}
+{% block center_content %}
 
-  <script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>
-</head>
-<body id="maincontainer">
-<!-- 头部 -->
-
-<!--<div style="height:215px; background:url(/resource/uploadfile/image/20190930/20190930111619398.jpg) no-repeat center top;"></div>-->
-
-
-<div class="QScenbox">
-  <div class="Qlogo fl"><img src="/static/img/Qlogo.png" alt=""></div>
-  <div class="Qsearch fr">
-    <input id="ss-k" name="ss-k" type="text" class="fl" value="请输入关键字"
-           onfocus="if (value =='请输入关键字'){value =''}this.style.color='#333' "
-           onblur="if (value ==''){value='请输入关键字'}this.style.color='#333'"
-           onkeyup="javascript:if(event.keyCode==13){siteSearch();}">
-    <span class="Qsou fr" onclick="siteSearch()"> </span>
-  </div>
-</div>
-<ul class="Qnav">
-  <li class=""><a href="/" class="Qa1">首页</a></li>
-  <li id="zwgk201803120100392355" class="Qcurrent"><a href="/id_zwgk201803120100392355/Index.shtml" class="Qa2">政务公开</a>
-  </li>
-  <li id="tjsj201803120100294255"><a href="/id_tjsj201803120100294255/Index.shtml" class="Qa3">统计数据</a></li>
-  <li id="wsbs201803120100172099"><a href="/id_wsbs201803120100172099/Index.shtml" class="Qa4">网上办事</a></li>
-  <li id="hdjl201803120059532727" style="margin-right: 0px;"><a href="/id_hdjl201803120059532727/Index.shtml"
-                                                                class="Qa5">互动交流</a></li>
-</ul>
-<script>
-    function siteSearch() {
-        var key = document.getElementById('ss-k').value;
-        if (key == '' || key == '请输入关键字') {
-            alert('请输入查询条件!');
-            return false;
-        }
-        //alert(key);
-        key = encodeURIComponent(key);
-        key = key.replace(/%/g, "@");
-        location = '/key_' + key + '/search.shtml';
-    }
-
-    function gowza() {
-        window.open("http://www.jxgtt.gov.cn/Column.shtml?p5=20000274");
-    }
-</script>
-<script type="text/javascript">
-    //  加入收藏 <a onclick="AddFavorite(window.location,document.title)">加入收藏</a>
-
-    function AddFavorite(sURL, sTitle) {
-        try {
-            window.external.addFavorite(sURL, sTitle);
-        } catch (e) {
-            try {
-                window.sidebar.addPanel(sTitle, sURL, "");
-            } catch (e) {
-                alert("加入收藏失败，请使用Ctrl+D进行添加");
-            }
-        }
-    }
-
-</script>
-<!-- 内容 -->
-<div class="Qcontent">
-  <div class="Qplace">
-    <div class="curPlace">
-      <a href="/index.shtml">首页</a>&gt;&gt;<a href="javascript:void(0);">搜索结果</a>
-    </div>
-  </div>
-  <div class="Qcolumn">
-
-    <ul class="QcolRul">
-      {% for sl in search_list %}
-      <li>
-        <span>{{ sl.datetime }}</span>
-        <a href="{{ url_for('news', cate=sl.cate, data=sl.id) }}" title="涉外调查许可申请表">涉外调查许可申请表</a>
-      </li>
-      {% endfor %}
-    </ul>
-    {#      <div class="Qtoggle">#}
-    {#        <div class="strong-ui-pager">#}
-    {#          首页 &nbsp;&nbsp;#}
-    {#          上一页 &nbsp;&nbsp;#}
-    {#          下一页 &nbsp;&nbsp;#}
-    {#          末页&nbsp;#}
-    {#          <span>1/1</span>&nbsp;#}
-    {#          <input id="pager-index" size="2" type="text" onkeypress="javascript:if(event.keyCode==13){pagerGo();}">#}
-    {#          <button type="button" id="pager-go" onclick="pagerGo();">Go</button>#}
-    {#          <script type="text/javascript">#}
-    {#              var curpage = parseInt(1);#}
-    {#              var totalpage = parseInt(1);#}
-    {##}
-    {#              function pagerGo() {#}
-    {#                  var nav = document.getElementById("pager-index").value;#}
-    {#                  nav = Math.round(nav);#}
-    {#                  nav = isNaN(nav) ? 1 : nav;#}
-    {#                  nav = (nav <= 1) ? 1 : nav;#}
-    {#                  nav = (nav >= totalpage) ? totalpage : nav;#}
-    {#                  var url = "/page_##/key_@E7@94@B3@E8@AF@B7@E8@A1@A8/search.shtml";#}
-    {#                  location = url.replace("##", nav);#}
-    {#              }#}
-    {#          </script>#}
-    {#        </div>#}
-    {#      </div>#}
-
-
-  </div>
-</div>
-<!-- 底部 -->
-<div class="Qfooter">
-  <!-- 友情链接 -->
-  <div class="Qlink">
-
-  </div>
-  <!-- 版权 -->
-  <div class="QfotBot">
-
-  </div>
-</div>
-<script src="/static/js/easy.navigat.js"></script>
-<script>
-    $(function () {
-        $('.Qnav li').each(function (i) {
-            $(this).hover(function () {
-                $(this).addClass('Qcurrent').siblings().removeClass('Qcurrent');
-                $('.Qcontent:eq(' + i + ')').removeClass('hide').siblings('.Qcontent').addClass('hide');
-            });
-        });
-
-        // 头部导航选中
-        var Aid = '';
-        if (Aid != '') {
-            $('#' + Aid).addClass('Qcurrent').siblings().removeClass('Qcurrent');
-            var index = $('#' + Aid).index();
-            $('.Qcontent:eq(' + index + ')').removeClass('hide').siblings('.Qcontent').addClass('hide');
-            $('.Qnav li').each(function (i) {
-                var navid = $(this).attr('id');
-                if (Aid == navid) {
-                    $(this).addClass('Qcurrent').siblings().removeClass('Qcurrent');
-                }
-            });
-        }
-
-        $('.guanbi').click(function () {
-            $('.weibo').slideUp(300);
-        });
-    });
-
-</script>
-<script type="text/javascript">
-    $(function () {
-        $('.Qnav li:last').css('marginRight', '0px');
-        $('.Qnav li').mouseover(function () {
-            if (!$(this).hasClass('Qcurrent')) {
-                $(this).addClass('Qcurrent').siblings().removeClass('Qcurrent');
-            }
-        });
-
-        $('.QcolL li').mouseover(function () {
-            if (!$(this).hasClass('ColumnCur')) {
-                $(this).addClass('ColumnCur').siblings().removeClass('ColumnCur');
-            }
-        });
-
-    });
-</script>
-
-</body>
-</html>
+{% endblock %}
