--- a/templates/admin/login.html
+++ b/templates/admin/login.html
@@ -75,7 +75,7 @@
 </head>
 <body>
 <div id="login">
-    <h1>Login</h1>
+    <h1>统计局后台管理系统登录</h1>
     <form method="post" action="{{ url_for('.login_view') }}">
         <p>{{ form.name(class='input') }}</p>
         <p>{{ form.phone(class='input') }}</p>
