--- a/templates/leader_intro.html
+++ b/templates/leader_intro.html
@@ -1,4 +1,4 @@
-{% extends "list.html" %}
+{% extends "news_list.html" %}
 {% block left_list %}
   <ul class="listUl">
     <div class="Qli"><a href="javascript:void(0);">{{ left_list[0].name }}</a></div>
