--- a/templates/base_view.html
+++ b/templates/base_view.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -8,7 +9,7 @@
   <script src="/static/js/responsiveslides.min.js"></script>
   <script src="/static/js/jquery.kxbdMarquee.js"></script>
   <script src="/static/js/echarts.js"></script>
-  <script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>
+{#  <script src="chrome-extension://mooikfkahbdckldjjndioackbalphokd/assets/prompt.js"></script>#}
 </head>
 
 <body id="maincontainer" onload="show()">
@@ -18,9 +19,12 @@
 <div class="QScenbox">
   <div class="Qlogo fl"><img src="/static/img/Qlogo.png" alt=""></div>
   <div class="Qsearch fr">
-    <form action="/search_list/" method="post">
+    <form action="{{ url_for('search_list') }}" method="post">
       <input id="ss-k" name="ss-k" type="text" class="fl" placeholder="请输入关键字">
-      <span class="Qsou fr" type="submit"> </span>
+{#      <span class="Qsou fr" type="submit"></span>#}
+      <button class="" type="submit" style="background:transparent; border: 1px solid transparent;outline: none;">
+{#        <img src="/static/img/search.png" alt="">#}
+      </button>
     </form>
   </div>
 </div>
@@ -77,42 +81,36 @@
       <!-- 图片轮播新闻 -->
       <div class="Qleft fl">
         <ul class="rslides centered-btns centered-btns1" id="dowebok">
-
           <li id="centered-btns1_s0" class=""
               style="display: block; float: none; position: absolute; opacity: 0; z-index: 1; transition: opacity 500ms ease-in-out 0s;">
             <a href="#" target="_blank"><img
                     src="/static/img/20190823093409753.jpg" alt="" width="620" height="388"></a>
-            <p><a href="/id_8a84cc836bdf3c5d016cbc868f306c74/news.shtml">宁吉喆在江西调研指导，要求新时代统计调查人要饮水思...</a></p>
+            <p><a href="#">宁吉喆在江西调研指导，要求新时代统计调查人要饮水思...</a></p>
           </li>
-
           <li id="centered-btns1_s1" class=""
               style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out 0s;">
-            <a href="/id_8a84cc836560a1d301661a62cdb9410d/news.shtml" target="_blank"><img
+            <a href="#" target="_blank"><img
                     src="/static/img/20180927155232812.jpg" alt="" width="620" height="388"></a>
-            <p><a href="/id_8a84cc836560a1d301661a62cdb9410d/news.shtml">省委副书记、代省长易炼红到省统计局调研并强调：领导...</a></p>
+            <p><a href="#">省委副书记、代省长易炼红到省统计局调研并强调：领导...</a></p>
           </li>
-
           <li id="centered-btns1_s2" class=""
               style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out 0s;">
-            <a href="/id_8a84cc836ee526b7016fc6b7fd706ac5/news.shtml" target="_blank"><img
+            <a href="#" target="_blank"><img
                     src="/static/img/20200121135032447.jpg" alt="" width="620" height="388"></a>
-            <p><a href="/id_8a84cc836ee526b7016fc6b7fd706ac5/news.shtml">2019年全省经济运行情况新闻发布会召开</a></p>
+            <p><a href="#">2019年全省经济运行情况新闻发布会召开</a></p>
           </li>
-
           <li id="centered-btns1_s3" class="centered-btns1_on"
               style="float: left; position: relative; opacity: 1; z-index: 2; display: list-item; transition: opacity 500ms ease-in-out 0s;">
-            <a href="/id_8a84cc836ee526b7016f9ede9ebb4569/news.shtml" target="_blank"><img
-                    src="/static/img/20200113191800269.jpg" alt="" width="620" height="388"></a>
-            <p><a href="/id_8a84cc836ee526b7016f9ede9ebb4569/news.shtml">2020年全省统计系统文艺汇演在南昌举行</a></p>
+            <a href="#" target="_blank">
+              <img src="/static/img/20200113191800269.jpg" alt="" width="620" height="388"></a>
+            <p><a href="#">2020年全省统计系统文艺汇演在南昌举行</a></p>
           </li>
-
           <li id="centered-btns1_s4" class=""
               style="float: none; position: absolute; opacity: 0; z-index: 1; display: list-item; transition: opacity 500ms ease-in-out 0s;">
-            <a href="/id_8a84cc836ee526b7016f9e207f304204/news.shtml" target="_blank"><img
+            <a href="#" target="_blank"><img
                     src="/static/img/20200113170359311.jpg" alt="" width="620" height="388"></a>
-            <p><a href="/id_8a84cc836ee526b7016f9e207f304204/news.shtml">全省统计工作会议在南昌召开</a></p>
+            <p><a href="#">全省统计工作会议在南昌召开</a></p>
           </li>
-
         </ul>
 
         <ul class="centered-btns_tabs centered-btns1_tabs">
@@ -288,7 +286,7 @@
             {% for l in leader %}
               <li class="oddLi">
                 <a href="{{ url_for('leader_intro') }}"
-                   target="_blank">{{ l.name }}</a><span>|</span>{{ l.title }}
+                   target="_blank">{{ l.name }}</a><span>|</span>{{ l.leader_title }}
               </li>
             {% endfor %}
           </ul>
@@ -429,11 +427,6 @@
   <!-- 统计数据内容 -->
   <div class="Qcontent Qtotal hide">
     <div class="QtotalLeft fl">
-
-
-      <!-- 统计年鉴 -->
-
-
       <!-- 进度数据 -->
       <div class="totalBox totaldiv1" style="margin-top: 19px;">
         <div class="QrightHead Qbottom">
@@ -450,7 +443,7 @@
               {% for jx in jx_data5 %}
                 <li>
                   <span>{{ jx.datetime }}</span>
-                  <a href="{{ url_for('news', cate='jx_data', data=jx.id) }}"
+                  <a href="{{ url_for('news', cate='jx', data=jx.id) }}"
                      target="_blank">{{ jx.title[:30] + '...' }}</a>
                 </li>
               {% endfor %}
@@ -509,20 +502,20 @@
         <div class="Whead Qbottom">
         <span class="Wactive">
           <i style="cursor:pointer;"
-             onclick="window.open('/id_swdcjgzgrz201803120103518569/column.shtml')">涉外调查机构资格认证</i>
+          onclick="{{ url_for('qualification', cate='all') }}">涉外调查机构资格认证</i>
           <em class="Wlbj"></em><em class="Wrbj"></em></span>
         </div>
         <div class="QrightHead">
-          <p class="Qp2"><a href="/id_swdcjgzgrz201803120103518569/column.shtml" target="_blank">全部/</a></p>
-          <p class="Qp2"><a href="/id_ygwj201803120130262472/column.shtml" target="_blank"><!-- 有关文件 -->有关文件 /</a>
+          <p class="Qp2"><a href="{{ url_for('qualification', cate='all') }}" target="_blank">全部 /</a></p>
+          <p class="Qp2"><a href="{{ url_for('qualification', cate='relatives') }}" target="_blank">有关文件 /</a>
           </p>
-          <p class="Qp2"><a href="/id_bgxz201803120130085093/column.shtml" target="_blank"><!-- 表格下载 -->表格下载 /</a>
+          <p class="Qp2"><a href="{{ url_for('qualification', cate='table') }}" target="_blank">表格下载 /</a>
           </p>
-          <p class="Qp2"><a href="/id_wssp201803120130005619/column.shtml" target="_blank"><!-- 网上审批 -->网上审批 /</a>
+          <p class="Qp2"><a href="{{ url_for('qualification', cate='procedure') }}" target="_blank">网上审批 /</a>
           </p>
-          <p class="Qp2 Qte"><a href="/id_ztcx201803120129501815/column.shtml" target="_blank"><!-- 状态查询 -->状态查询
-            /</a></p>
-          <p class="Qp2"><a href="/id_spgg201803120129405870/column.shtml" target="_blank"><!-- 审批公告 -->审批公告</a>
+          <p class="Qp2 Qte"><a href="{{ url_for('qualification', cate='state') }}" target="_blank">状态查询 /</a>
+          </p>
+          <p class="Qp2"><a href="{{ url_for('qualification', cate='notice') }}" target="_blank">审批公告</a>
           </p>
         </div>
         <!-- 全部 -->
@@ -604,28 +597,28 @@
         <div class="Whead Qbottom">
         <span class="Wactive"><!-- 涉外调查项目审批 --><i
                 style="cursor:pointer;"
-                onclick="window.open('/id_swdcxmsp201803120103425407/column.shtml')">涉外调查项目审批</i><em
+                onclick="{{ url_for('exam', cate='all') }}">涉外调查项目审批</i><em
                 class="Wlbj"></em><em
                 class="Wrbj"></em></span>
         </div>
         <div class="QrightHead">
           <p class="Qp2">
-            <a href="/id_swdcxmsp201803120103425407/column.shtml" target="_blank">全部 /</a>
+            <a href="{{ url_for('exam', cate='all') }}" target="_blank">全部 /</a>
           </p>
           <p class="Qp2">
-            <a href="/id_ygwj201803120132314287/column.shtml" target="_blank">有关文件 /</a>
+            <a href="{{ url_for('exam', cate='relatives') }}" target="_blank">有关文件 /</a>
           </p>
           <p class="Qp2 Qte">
-            <a href="/id_bgxz201803120132063842/column.shtml" target="_blank">表格下载 /</a>
+            <a href="{{ url_for('exam', cate='table') }}" target="_blank">表格下载 /</a>
           </p>
           <p class="Qp2">
-            <a href="/id_wssp201803120132004573/column.shtml" target="_blank">网上审批 /</a>
+            <a href="{{ url_for('exam', cate='procedure') }}" target="_blank">网上审批 /</a>
           </p>
           <p class="Qp2">
-            <a href="/id_ztcx201803120131545478/column.shtml" target="_blank">状态查询 /</a>
+            <a href="{{ url_for('exam', cate='state') }}" target="_blank">状态查询 /</a>
           </p>
           <p class="Qp2">
-            <a href="/id_spgg201803120131424428/column.shtml" target="_blank">审批公告 </a>
+            <a href="{{ url_for('exam', cate='notice') }}" target="_blank">审批公告 </a>
           </p>
         </div>
         <!-- 全部 -->
@@ -634,7 +627,7 @@
             {% for e5 in exam5 %}
               <li>
                 <span>{{ e5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=e5.id) }}"
+                <a href="{{ url_for('news', cate='exam', data=e5.id) }}"
                    target="_blank">{{ e5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -646,7 +639,7 @@
             {% for er5 in exam_real5 %}
               <li>
                 <span>{{ er5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=er5.id) }}"
+                <a href="{{ url_for('news', cate='exam', data=er5.id) }}"
                    target="_blank">{{ er5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -658,7 +651,7 @@
             {% for et5 in exam_tab5 %}
               <li>
                 <span>{{ et5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=et5.id) }}"
+                <a href="{{ url_for('news', cate='exam', data=et5.id) }}"
                    target="_blank">{{ et5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -682,7 +675,7 @@
             {% for es5 in exam_state5 %}
               <li>
                 <span>{{ es5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=es5.id) }}"
+                <a href="{{ url_for('news', cate='exam', data=es5.id) }}"
                    target="_blank">{{ es5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -694,29 +687,28 @@
             {% for en5 in exam_noti %}
               <li>
                 <span>{{ en5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=en5.id) }}"
+                <a href="{{ url_for('news', cate='exam', data=en5.id) }}"
                    target="_blank">{{ en5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
           </ul>
         </div>
-
       </div>
       <!-- 地方统计调查项目管理 -->
       <div class="Wdftjgl">
         <div class="Whead Qbottom">
-        <span class="Wactive"><!-- 地方统计调查项目管理 --><i
-                style="cursor:pointer;"
-                onclick="window.open('/id_dftjdcxmgl201803120103320056/column.shtml')">地方统计调查项目管理</i><em
+        <span class="Wactive"><i style="cursor:pointer;"
+                onclick="{{ url_for('integration', cate='relatives') }}">地方统计调查项目管理</i><em
                 class="Wlbj"></em><em class="Wrbj"></em></span>
         </div>
         <div class="QrightHead">
-          <p class="Qp2 Qte"><a href="{{ url_for('integration', cate='relatives') }}" target="_blank">全部/</a></p>
-          <p class="Qp2"><a href="{{ url_for('integration', cate='relatives') }}" target="_blank"><!-- 有关文件 -->有关文件 /</a>
+          <p class="Qp2 Qte"><a href="{{ url_for('integration', cate='relatives') }}" target="_blank">全部/</a>
           </p>
-          <p class="Qp2"><a href="{{ url_for('integration', cate='table') }}" target="_blank"><!-- 表格下载 -->表格下载 /</a>
+          <p class="Qp2"><a href="{{ url_for('integration', cate='relatives') }}" target="_blank">有关文件 /</a>
           </p>
-          <p class="Qp2"><a href="{{ url_for('integration', cate='notice') }}" target="_blank"><!-- 审批公告 -->审批公告</a>
+          <p class="Qp2"><a href="{{ url_for('integration', cate='table') }}" target="_blank">表格下载 /</a>
+          </p>
+          <p class="Qp2"><a href="{{ url_for('integration', cate='notice') }}" target="_blank">审批公告</a>
           </p>
         </div>
         <!-- 全部 -->
@@ -725,7 +717,7 @@
             {% for m5 in mana5 %}
               <li>
                 <span>{{ m5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=m5.id) }}"
+                <a href="{{ url_for('news', cate='manage', data=m5.id) }}"
                    target="_blank">{{ m5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -734,10 +726,10 @@
         <!-- 有关文件 -->
         <div class="QrightHdiv hide">
           <ul class="QnewsUl">
-            {% for mt5 in mana_tab5 %}
+            {% for mt5 in mana_real5 %}
               <li>
                 <span>{{ mt5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=mt5.id) }}"
+                <a href="{{ url_for('news', cate='manage', data=mt5.id) }}"
                    target="_blank">{{ mt5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -746,10 +738,10 @@
         <!-- 表格下载 -->
         <div class="QrightHdiv hide">
           <ul class="QnewsUl">
-            {% for mr5 in mana_real5 %}
+            {% for mr5 in mana_tab5 %}
               <li>
                 <span>{{ mr5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=mr5.id) }}"
+                <a href="{{ url_for('news', cate='manage', data=mr5.id) }}"
                    target="_blank">{{ mr5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -761,7 +753,7 @@
             {% for mn5 in mana_noti %}
               <li>
                 <span>{{ mn5.datetime }}</span>
-                <a href="{{ url_for('news', cate='qualification', data=mn5.id) }}"
+                <a href="{{ url_for('news', cate='manage', data=mn5.id) }}"
                    target="_blank">{{ mn5.title[:28] + '...' }}</a>
               </li>
             {% endfor %}
@@ -778,32 +770,26 @@
         </div>
         <div class="WythfwList">
           <ul>
-            <li>
-              <a class="bsznIcon" href="{{ url_for('integration', cate='relatives') }}" target="_blank"><p>
+            <li><a class="bsznIcon" href="{{ url_for('integration', cate='relatives') }}" target="_blank"><p>
                 有关文件</p>
               </a>
             </li>
-            <li>
-              <a class="zxsbIcon" href="{{ url_for('integration', cate='procedure') }}" target="_blank"><p>
+            <li><a class="zxsbIcon" href="{{ url_for('integration', cate='procedure') }}" target="_blank"><p>
                 审批程序</p>
               </a>
             </li>
-            <li>
-              <a class="rbgxzIcon" href="{{ url_for('integration', cate='table') }}" target="_blank"><p>
+            <li><a class="rbgxzIcon" href="{{ url_for('integration', cate='table') }}" target="_blank"><p>
                 表格下载</p>
               </a>
             </li>
-            <li>
-              <a class="jgcxIcon" href="{{ url_for('integration', cate='notice') }}" target="_blank"><p>
+            <li><a class="jgcxIcon" href="{{ url_for('integration', cate='notice') }}" target="_blank"><p>
                 审批公告</p>
               </a>
             </li>
-            <li>
-              <a class="tjzdxzIcon" href="{{ url_for('integration', cate='sys') }}" target="_blank"><p>
+            <li><a class="tjzdxzIcon" href="{{ url_for('integration', cate='sys') }}" target="_blank"><p>
                 统计制度下载</p></a>
             </li>
-            <li>
-              <a class="tjbbxzIcon" href="{{ url_for('integration', cate='report') }}" target="_blank"><p>
+            <li><a class="tjbbxzIcon" href="{{ url_for('integration', cate='report') }}" target="_blank"><p>
                 统计报表下载</p></a>
             </li>
             <li class="nobjLi"></li>
@@ -820,21 +806,17 @@
       <div class="Wzxft fl">
         <div class="Whead Qbottom">
           <a href="{{ url_for('interview_list') }}" target="_blank">更多</a>
-          <span class="Wactive">
-          <i style="cursor:pointer;">在线访谈</i><em
-                  class="Wlbj"></em><em class="Wrbj"></em>
+          <span class="Wactive"><i style="cursor:pointer;">在线访谈</i><em class="Wlbj"></em><em class="Wrbj"></em>
         </span>
         </div>
         <div class="WzxftList fl">
           <dl>
-
-            <dt><img src="/resource/tongbu/image/20200121/20200121135032447.jpg" alt=""></dt>
+            <dt><img src="/static/img/20200121135032447.jpg" alt=""></dt>
             <dd>
               <div class="WftTit"><a
-                      href="{{ url_for('news', cate='interview', data=int9[0].id) }}">{{ int9[0].title }}</a></div>
+                      href="{{ url_for('news', cate='interview', data=int9[0].id) }}" target="_blank">{{ int9[0].title }}</a></div>
               <p>{{ int9[0].content[:150] + '...' }}</p>
             </dd>
-
           </dl>
         </div>
         <div class="Wwqhg fl">
@@ -844,8 +826,7 @@
           <ul class="wqhgUl">
             {% for i9 in int9 %}
               <li><a href="{{ url_for('news', cate='interview', data=i9.id) }}"
-                     target="_blank">{{ i9.title[: 14] + '...' }}</a>
-              </li>
+                     target="_blank">{{ i9.title[: 14] + '...' }}</a></li>
             {% endfor %}
             <li class="nobjLi"></li>
           </ul>
@@ -860,21 +841,15 @@
           <em class="Wlbj"></em><em class="Wrbj"></em></span>
         </div>
         <div class="WzxzxList fl">
-
           {% for c in consult4 %}
             <div class="WzxzxQW">
               <div class="WzxTime">{{ c.ask_time }}</div>
-              <p class="Wques" title="您好，我在兼职猫网页上看到统计局社情民意调查中心招聘周末兼职，请问信息是否属实？">
-                {{ c.question[:20] + '...' }}
-              </p>
-              <p class="Wansw" title="你好，请咨询江西省统计局社情民意调查中心：079186236154、079186272362">
-                {{ c.answer[:25] + '...' }}
-                <a href="{{ url_for('consult_show', id=c.id) }}" target="_blank">[详细]</a>
+              <p class="Wques" title="">{{ c.question[:20] + '...' }}</p>
+              <p class="Wansw" title="">{{ c.answer[:25] + '...' }}
+                <a href="{{ url_for('consult_show', data=c.id) }}" target="_blank">[详细]</a>
               </p>
             </div>
           {% endfor %}
-
-
         </div>
       </div>
     </div>
